# Collaborative-Article-Sharing

./: .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  example.env
.github/worflows/: docker-image.yml
.github/workflows/: api-docker-image.yml  cli-docker-image.yml  docker-image.yml  test_cli-docker-image.yml
CLI/: README.md  pyproject.toml  setup.py
CLI/cas/: auth.py  cli.py  requirements.txt  session_details.json
CLI/cas/commands/: auth.py  group_create.py  group_delete.py  group_list.py  group_privacy.py  help.py  info.py  pull.py  push.py
CLI/src/: cli.py  constants.py  session_utils.py
CLI/src/commands/: __init__.py  auth.py  group_create.py  group_delete.py  group_list.py  group_privacy.py  logout.py  pull.py  push.py
CLI/tests/: test_cli.py
api/: Dockerfile  gunicorn_config.py  main.py  requirements.txt
api/auth/: login.py  signup.py
api/auth/group/: create.py  delete.py  list.py  privacy.py
api/tests/: test_main.py
app/: .gitignore  package-lock.json  package.json
app/shared/: api.js  firebase.js
app/src/app/: globals.css  layout.js  page.js  page.module.css
app/src/app/auth/connect/: page.js
app/src/app/auth/connect/success/: page.js
app/src/app/auth/login/: page.js
app/src/app/auth/signup/: page.js
app/src/app/connect/success/: page.js
app/src/app/dashboard/: page.js
app/src/components/auth/: auth.js  auth.module.css
app/src/components/auth/login/: login.js
app/src/components/auth/logout/: logout.js
app/src/components/auth/signup/: signup.js
app/src/components/dashboard/: dashboard.js
app/src/components/header/: header.js
