[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collaborative-article-sharing"
version = "0.1.0-alpha.4"
description = "Command-line interface for interacting with the CAS API"
authors = [
    { name = "upayan", email = "upayanm3@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests","argparse"]

[project.scripts]
cas = "cas.cli:main"